Bug 264796 - mouse cursor turns to hand on hover in double-click mode
Summary: mouse cursor turns to hand on hover in double-click mode
Status: RESOLVED FIXED
Alias: None
Product: dolphin
Classification: Applications
Component: general (other bugs)
Version First Reported In: 16.12.2
Platform: Arch Linux Linux
: NOR normal
Target Milestone: ---
Assignee: Peter Penz
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2011-01-29 23:21 UTC by Kilian Lackhove
Modified: 2011-01-31 21:44 UTC (History)
1 user (show)

See Also:
Latest Commit:
Version Fixed/Implemented In: 4.6.1
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Kilian Lackhove 2011-01-29 23:21:24 UTC
Version:           unspecified (using KDE 4.6.0) 
OS:                Linux

when set to "double-click to open files and folders", the mouse cursor turns into the hand when hovering over a folder. Clicking the item once selects it and the cursor turns into the normal arrow again.

I have the same issue in konqueror.

my setup: archlinux with kde 4.6. I created a new user with a clean /home and .kde4 directory, so its not an upgrade issue.

Reproducible: Always
Comment 1 Frank Reininghaus 2011-01-31 14:59:23 UTC
Thanks, I can reproduce in trunk. Note that the cursor becomes a hand again if you move it away from the folder and back again.

Another mouse cursor related issue is bug 264791, I don't know if there is some connection between the two.
Comment 2 Peter Penz 2011-01-31 21:31:33 UTC
Git commit e2180b5f3dc949778c54ad31ce72b466d5333baf by Peter Penz.
Pushed by ppenz into branch 'master'.

Don't show the pointing-hand cursor when double-click is enabled

CCBUG: 264796

M  +4    -1    dolphin/src/views/selectionmanager.cpp     

http://commits.kde.org/a5d5b61a/e2180b5f3dc949778c54ad31ce72b466d5333baf
Comment 3 Peter Penz 2011-01-31 21:33:13 UTC
Git commit 09d30e3590b27e6955512d4726e1b188430765f8 by Peter Penz.
Pushed by ppenz into branch 'KDE/4.6'.

Don't show the pointing-hand cursor when double-click is enabled

BUG: 264796
FIXED-IN: 4.6.1

M  +4    -1    dolphin/src/views/selectionmanager.cpp     

http://commits.kde.org/a5d5b61a/09d30e3590b27e6955512d4726e1b188430765f8
Comment 4 Kilian Lackhove 2011-01-31 21:37:00 UTC
wow, that was fast, thanks a lot!