Don't show the pointing-hand cursor when double-click is enabled

BUG: 264796
FIXED-IN: 4.6.1